--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,114 +5,115 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇦🇺 澳大利亚-200.0KB/s(Youtube:不良林), server: 185.167.116.253, port: 9020, type: ss, cipher: aes-256-cfb, password: BNmAXXxAHYpTRdzu}
-  - {name: 🇬🇧 英国-168.4KB/s(Youtube:不良林), server: 152.89.210.105, port: 9093, type: ss, cipher: aes-256-cfb, password: wfLC2y7rzZyCmuyt}
-  - {name: 🇨🇦 加拿大-1.33MB/s(Youtube:不良林), server: 134.195.196.231, port: 8888, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
-  - {name: 波兰-860.8KB/s(Youtube:不良林), server: 217.30.10.65, port: 9006, type: ss, cipher: aes-256-cfb, password: FAdUvMJUq5vDgKEq}
-  - {name: 波兰-646.8KB/s(Youtube:不良林), server: 217.30.10.65, port: 9094, type: ss, cipher: aes-256-cfb, password: rpgbNnU9rDDU4aWZ}
-  - {name: 波兰-226.5KB/s(Youtube:不良林), server: 217.30.10.65, port: 9064, type: ss, cipher: aes-256-cfb, password: cp8pRSUAyLhTfVWH}
-  - {name: 波兰-161.3KB/s(Youtube:不良林), server: 217.30.10.65, port: 9043, type: ss, cipher: aes-256-cfb, password: HSZuyJQcWe8dxNdF}
-  - {name: 🇺🇸 美国-602.5KB/s(Youtube:不良林), server: 169.197.142.39, port: 5000, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
-  - {name: 🇺🇸 美国-513.3KB/s(Youtube:不良林), server: 169.197.142.39, port: 8882, type: ss, cipher: aes-256-gcm, password: kDWvXYZoTBcGkC4}
-  - {name: 🇺🇸 美国-366.2KB/s(Youtube:不良林), server: 169.197.142.39, port: 6679, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
+  - {name: 🇳🇱 荷兰-158.5KB/s(Youtube:不良林), server: 213.183.51.171, port: 9015, type: ss, cipher: aes-256-cfb, password: ZpNDDKRu9MagNvaf}
+  - {name: 🇨🇦 加拿大-1.34MB/s(Youtube:不良林), server: 134.195.196.231, port: 8888, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
+  - {name: 🇦🇺 澳大利亚-1.31MB/s(Youtube:不良林), server: 185.167.116.253, port: 9070, type: ss, cipher: aes-256-cfb, password: bf7v334KKDV3YDhH}
+  - {name: 🇦🇺 澳大利亚-1.31MB/s(Youtube:不良林) 2, server: 185.167.116.253, port: 9041, type: ss, cipher: aes-256-cfb, password: U6qnYRhfyDmn8sgn}
+  - {name: 🇯🇵 日本-2.99MB/s(Youtube:不良林), server: 85.208.108.58, port: 8080, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
+  - {name: 🇬🇧 英国-1.93MB/s(Youtube:不良林), server: jgwld2.gaox.ml, port: 443, type: trojan, password: d7fd8aaa-4581-4281-80aa-4b63e5e1f157, sni: jgwld2.gaox.ml, skip-cert-verify: true}
+  - {name: 🇭🇰 香港-3.25MB/s(Youtube:不良林), server: 527hk1.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 527hk1.fans8.xyz}}
+  - {name: 🇺🇸 美国-1.30MB/s(Youtube:不良林), server: 169.197.142.39, port: 5003, type: ss, cipher: aes-256-gcm, password: g5MeD6Ft3CWlJId}
+  - {name: 🇺🇸 美国-653.2KB/s(Youtube:不良林), server: 169.197.142.39, port: 8118, type: ss, cipher: aes-256-gcm, password: cdBIDV42DCwnfIN}
+  - {name: 🇺🇸 美国-837.1KB/s(Youtube:不良林), server: 169.197.142.39, port: 8091, type: ss, cipher: aes-256-gcm, password: PCnnH6SQSnfoS27}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇦🇺 澳大利亚-200.0KB/s(Youtube:不良林)
-      - 🇬🇧 英国-168.4KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.33MB/s(Youtube:不良林)
-      - 波兰-860.8KB/s(Youtube:不良林)
-      - 波兰-646.8KB/s(Youtube:不良林)
-      - 波兰-226.5KB/s(Youtube:不良林)
-      - 波兰-161.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-602.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-513.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-366.2KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-158.5KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.34MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.31MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.31MB/s(Youtube:不良林) 2
+      - 🇯🇵 日本-2.99MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.93MB/s(Youtube:不良林)
+      - 🇭🇰 香港-3.25MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.30MB/s(Youtube:不良林)
+      - 🇺🇸 美国-653.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-837.1KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇦🇺 澳大利亚-200.0KB/s(Youtube:不良林)
-      - 🇬🇧 英国-168.4KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.33MB/s(Youtube:不良林)
-      - 波兰-860.8KB/s(Youtube:不良林)
-      - 波兰-646.8KB/s(Youtube:不良林)
-      - 波兰-226.5KB/s(Youtube:不良林)
-      - 波兰-161.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-602.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-513.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-366.2KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-158.5KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.34MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.31MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.31MB/s(Youtube:不良林) 2
+      - 🇯🇵 日本-2.99MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.93MB/s(Youtube:不良林)
+      - 🇭🇰 香港-3.25MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.30MB/s(Youtube:不良林)
+      - 🇺🇸 美国-653.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-837.1KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇦🇺 澳大利亚-200.0KB/s(Youtube:不良林)
-      - 🇬🇧 英国-168.4KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.33MB/s(Youtube:不良林)
-      - 波兰-860.8KB/s(Youtube:不良林)
-      - 波兰-646.8KB/s(Youtube:不良林)
-      - 波兰-226.5KB/s(Youtube:不良林)
-      - 波兰-161.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-602.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-513.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-366.2KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-158.5KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.34MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.31MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.31MB/s(Youtube:不良林) 2
+      - 🇯🇵 日本-2.99MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.93MB/s(Youtube:不良林)
+      - 🇭🇰 香港-3.25MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.30MB/s(Youtube:不良林)
+      - 🇺🇸 美国-653.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-837.1KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
+      - 🇭🇰 香港-3.25MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇦🇺 澳大利亚-200.0KB/s(Youtube:不良林)
-      - 🇬🇧 英国-168.4KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.33MB/s(Youtube:不良林)
-      - 波兰-860.8KB/s(Youtube:不良林)
-      - 波兰-646.8KB/s(Youtube:不良林)
-      - 波兰-226.5KB/s(Youtube:不良林)
-      - 波兰-161.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-602.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-513.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-366.2KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-158.5KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.34MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.31MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.31MB/s(Youtube:不良林) 2
+      - 🇯🇵 日本-2.99MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.93MB/s(Youtube:不良林)
+      - 🇭🇰 香港-3.25MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.30MB/s(Youtube:不良林)
+      - 🇺🇸 美国-653.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-837.1KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇦🇺 澳大利亚-200.0KB/s(Youtube:不良林)
-      - 🇬🇧 英国-168.4KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.33MB/s(Youtube:不良林)
-      - 波兰-860.8KB/s(Youtube:不良林)
-      - 波兰-646.8KB/s(Youtube:不良林)
-      - 波兰-226.5KB/s(Youtube:不良林)
-      - 波兰-161.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-602.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-513.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-366.2KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-158.5KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.34MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.31MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.31MB/s(Youtube:不良林) 2
+      - 🇯🇵 日本-2.99MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.93MB/s(Youtube:不良林)
+      - 🇭🇰 香港-3.25MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.30MB/s(Youtube:不良林)
+      - 🇺🇸 美国-653.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-837.1KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇦🇺 澳大利亚-200.0KB/s(Youtube:不良林)
-      - 🇬🇧 英国-168.4KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.33MB/s(Youtube:不良林)
-      - 波兰-860.8KB/s(Youtube:不良林)
-      - 波兰-646.8KB/s(Youtube:不良林)
-      - 波兰-226.5KB/s(Youtube:不良林)
-      - 波兰-161.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-602.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-513.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-366.2KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-158.5KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.34MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.31MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.31MB/s(Youtube:不良林) 2
+      - 🇯🇵 日本-2.99MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.93MB/s(Youtube:不良林)
+      - 🇭🇰 香港-3.25MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.30MB/s(Youtube:不良林)
+      - 🇺🇸 美国-653.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-837.1KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +129,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇦🇺 澳大利亚-200.0KB/s(Youtube:不良林)
-      - 🇬🇧 英国-168.4KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.33MB/s(Youtube:不良林)
-      - 波兰-860.8KB/s(Youtube:不良林)
-      - 波兰-646.8KB/s(Youtube:不良林)
-      - 波兰-226.5KB/s(Youtube:不良林)
-      - 波兰-161.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-602.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-513.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-366.2KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-158.5KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.34MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.31MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.31MB/s(Youtube:不良林) 2
+      - 🇯🇵 日本-2.99MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.93MB/s(Youtube:不良林)
+      - 🇭🇰 香港-3.25MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.30MB/s(Youtube:不良林)
+      - 🇺🇸 美国-653.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-837.1KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
