--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,115 +5,114 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇳🇱 荷兰-158.5KB/s(Youtube:不良林), server: 213.183.51.171, port: 9015, type: ss, cipher: aes-256-cfb, password: ZpNDDKRu9MagNvaf}
-  - {name: 🇨🇦 加拿大-1.34MB/s(Youtube:不良林), server: 134.195.196.231, port: 8888, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
+  - {name: 🇦🇺 澳大利亚-1.29MB/s(Youtube:不良林), server: 185.167.116.253, port: 9015, type: ss, cipher: aes-256-cfb, password: ZpNDDKRu9MagNvaf}
+  - {name: 波兰-785.1KB/s(Youtube:不良林), server: 217.30.10.65, port: 9003, type: ss, cipher: aes-256-cfb, password: JdmRK9gMEqFgs8nP}
+  - {name: 🇺🇸 美国-209.4KB/s(Youtube:不良林), server: s162.s2022.xyz, port: 23802, type: trojan, password: d724e4d0-841b-3b92-ac0d-70fcbbb7e934, sni: s162.s2022.xyz, skip-cert-verify: true}
+  - {name: 🇦🇺 澳大利亚-1.25MB/s(Youtube:不良林), server: 185.167.116.253, port: 9041, type: ss, cipher: aes-256-cfb, password: U6qnYRhfyDmn8sgn}
   - {name: 🇦🇺 澳大利亚-1.31MB/s(Youtube:不良林), server: 185.167.116.253, port: 9070, type: ss, cipher: aes-256-cfb, password: bf7v334KKDV3YDhH}
-  - {name: 🇦🇺 澳大利亚-1.31MB/s(Youtube:不良林) 2, server: 185.167.116.253, port: 9041, type: ss, cipher: aes-256-cfb, password: U6qnYRhfyDmn8sgn}
-  - {name: 🇯🇵 日本-2.99MB/s(Youtube:不良林), server: 85.208.108.58, port: 8080, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
-  - {name: 🇬🇧 英国-1.93MB/s(Youtube:不良林), server: jgwld2.gaox.ml, port: 443, type: trojan, password: d7fd8aaa-4581-4281-80aa-4b63e5e1f157, sni: jgwld2.gaox.ml, skip-cert-verify: true}
-  - {name: 🇭🇰 香港-3.25MB/s(Youtube:不良林), server: 527hk1.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 527hk1.fans8.xyz}}
-  - {name: 🇺🇸 美国-1.30MB/s(Youtube:不良林), server: 169.197.142.39, port: 5003, type: ss, cipher: aes-256-gcm, password: g5MeD6Ft3CWlJId}
-  - {name: 🇺🇸 美国-653.2KB/s(Youtube:不良林), server: 169.197.142.39, port: 8118, type: ss, cipher: aes-256-gcm, password: cdBIDV42DCwnfIN}
-  - {name: 🇺🇸 美国-837.1KB/s(Youtube:不良林), server: 169.197.142.39, port: 8091, type: ss, cipher: aes-256-gcm, password: PCnnH6SQSnfoS27}
+  - {name: 🇬🇧 英国-2.06MB/s(Youtube:不良林), server: 152.89.210.105, port: 9060, type: ss, cipher: aes-256-cfb, password: ueLXVkvh4hckhErQ}
+  - {name: 🇬🇧 英国-1.52MB/s(Youtube:不良林), server: 152.89.210.105, port: 9064, type: ss, cipher: aes-256-cfb, password: cp8pRSUAyLhTfVWH}
+  - {name: 🇬🇧 英国-1.81MB/s(Youtube:不良林), server: 152.89.210.105, port: 9050, type: ss, cipher: aes-256-cfb, password: FG5ddLsMPbV5CutE}
+  - {name: 波兰-626.0KB/s(Youtube:不良林), server: 217.30.10.65, port: 9050, type: ss, cipher: aes-256-cfb, password: FG5ddLsMPbV5CutE}
+  - {name: 波兰-656.6KB/s(Youtube:不良林), server: 217.30.10.65, port: 9097, type: ss, cipher: aes-256-cfb, password: Sn5B7jTqr76aCJT8}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇳🇱 荷兰-158.5KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.34MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.29MB/s(Youtube:不良林)
+      - 波兰-785.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-209.4KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.25MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-1.31MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.31MB/s(Youtube:不良林) 2
-      - 🇯🇵 日本-2.99MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.93MB/s(Youtube:不良林)
-      - 🇭🇰 香港-3.25MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.30MB/s(Youtube:不良林)
-      - 🇺🇸 美国-653.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-837.1KB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.06MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.52MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.81MB/s(Youtube:不良林)
+      - 波兰-626.0KB/s(Youtube:不良林)
+      - 波兰-656.6KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇳🇱 荷兰-158.5KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.34MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.29MB/s(Youtube:不良林)
+      - 波兰-785.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-209.4KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.25MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-1.31MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.31MB/s(Youtube:不良林) 2
-      - 🇯🇵 日本-2.99MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.93MB/s(Youtube:不良林)
-      - 🇭🇰 香港-3.25MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.30MB/s(Youtube:不良林)
-      - 🇺🇸 美国-653.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-837.1KB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.06MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.52MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.81MB/s(Youtube:不良林)
+      - 波兰-626.0KB/s(Youtube:不良林)
+      - 波兰-656.6KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇳🇱 荷兰-158.5KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.34MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.29MB/s(Youtube:不良林)
+      - 波兰-785.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-209.4KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.25MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-1.31MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.31MB/s(Youtube:不良林) 2
-      - 🇯🇵 日本-2.99MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.93MB/s(Youtube:不良林)
-      - 🇭🇰 香港-3.25MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.30MB/s(Youtube:不良林)
-      - 🇺🇸 美国-653.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-837.1KB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.06MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.52MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.81MB/s(Youtube:不良林)
+      - 波兰-626.0KB/s(Youtube:不良林)
+      - 波兰-656.6KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇭🇰 香港-3.25MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇳🇱 荷兰-158.5KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.34MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.29MB/s(Youtube:不良林)
+      - 波兰-785.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-209.4KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.25MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-1.31MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.31MB/s(Youtube:不良林) 2
-      - 🇯🇵 日本-2.99MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.93MB/s(Youtube:不良林)
-      - 🇭🇰 香港-3.25MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.30MB/s(Youtube:不良林)
-      - 🇺🇸 美国-653.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-837.1KB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.06MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.52MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.81MB/s(Youtube:不良林)
+      - 波兰-626.0KB/s(Youtube:不良林)
+      - 波兰-656.6KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇳🇱 荷兰-158.5KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.34MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.29MB/s(Youtube:不良林)
+      - 波兰-785.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-209.4KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.25MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-1.31MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.31MB/s(Youtube:不良林) 2
-      - 🇯🇵 日本-2.99MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.93MB/s(Youtube:不良林)
-      - 🇭🇰 香港-3.25MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.30MB/s(Youtube:不良林)
-      - 🇺🇸 美国-653.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-837.1KB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.06MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.52MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.81MB/s(Youtube:不良林)
+      - 波兰-626.0KB/s(Youtube:不良林)
+      - 波兰-656.6KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇳🇱 荷兰-158.5KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.34MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.29MB/s(Youtube:不良林)
+      - 波兰-785.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-209.4KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.25MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-1.31MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.31MB/s(Youtube:不良林) 2
-      - 🇯🇵 日本-2.99MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.93MB/s(Youtube:不良林)
-      - 🇭🇰 香港-3.25MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.30MB/s(Youtube:不良林)
-      - 🇺🇸 美国-653.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-837.1KB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.06MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.52MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.81MB/s(Youtube:不良林)
+      - 波兰-626.0KB/s(Youtube:不良林)
+      - 波兰-656.6KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -129,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇳🇱 荷兰-158.5KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.34MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.29MB/s(Youtube:不良林)
+      - 波兰-785.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-209.4KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.25MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-1.31MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.31MB/s(Youtube:不良林) 2
-      - 🇯🇵 日本-2.99MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.93MB/s(Youtube:不良林)
-      - 🇭🇰 香港-3.25MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.30MB/s(Youtube:不良林)
-      - 🇺🇸 美国-653.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-837.1KB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.06MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.52MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.81MB/s(Youtube:不良林)
+      - 波兰-626.0KB/s(Youtube:不良林)
+      - 波兰-656.6KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
