--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇦🇺 澳大利亚-1.29MB/s(Youtube:不良林), server: 185.167.116.253, port: 9015, type: ss, cipher: aes-256-cfb, password: ZpNDDKRu9MagNvaf}
-  - {name: 波兰-785.1KB/s(Youtube:不良林), server: 217.30.10.65, port: 9003, type: ss, cipher: aes-256-cfb, password: JdmRK9gMEqFgs8nP}
-  - {name: 🇺🇸 美国-209.4KB/s(Youtube:不良林), server: s162.s2022.xyz, port: 23802, type: trojan, password: d724e4d0-841b-3b92-ac0d-70fcbbb7e934, sni: s162.s2022.xyz, skip-cert-verify: true}
-  - {name: 🇦🇺 澳大利亚-1.25MB/s(Youtube:不良林), server: 185.167.116.253, port: 9041, type: ss, cipher: aes-256-cfb, password: U6qnYRhfyDmn8sgn}
-  - {name: 🇦🇺 澳大利亚-1.31MB/s(Youtube:不良林), server: 185.167.116.253, port: 9070, type: ss, cipher: aes-256-cfb, password: bf7v334KKDV3YDhH}
-  - {name: 🇬🇧 英国-2.06MB/s(Youtube:不良林), server: 152.89.210.105, port: 9060, type: ss, cipher: aes-256-cfb, password: ueLXVkvh4hckhErQ}
-  - {name: 🇬🇧 英国-1.52MB/s(Youtube:不良林), server: 152.89.210.105, port: 9064, type: ss, cipher: aes-256-cfb, password: cp8pRSUAyLhTfVWH}
-  - {name: 🇬🇧 英国-1.81MB/s(Youtube:不良林), server: 152.89.210.105, port: 9050, type: ss, cipher: aes-256-cfb, password: FG5ddLsMPbV5CutE}
-  - {name: 波兰-626.0KB/s(Youtube:不良林), server: 217.30.10.65, port: 9050, type: ss, cipher: aes-256-cfb, password: FG5ddLsMPbV5CutE}
-  - {name: 波兰-656.6KB/s(Youtube:不良林), server: 217.30.10.65, port: 9097, type: ss, cipher: aes-256-cfb, password: Sn5B7jTqr76aCJT8}
+  - {name: 波兰-177.0KB/s(Youtube:不良林), server: 217.30.10.65, port: 9043, type: ss, cipher: aes-256-cfb, password: HSZuyJQcWe8dxNdF}
+  - {name: 🇨🇦 加拿大-2.14MB/s(Youtube:不良林), server: 134.195.196.231, port: 9101, type: ss, cipher: aes-256-gcm, password: e4FCWrgpkji3QY}
+  - {name: 🇦🇺 澳大利亚-1.06MB/s(Youtube:不良林), server: 185.167.116.253, port: 9097, type: ss, cipher: aes-256-cfb, password: Sn5B7jTqr76aCJT8}
+  - {name: 🇺🇸 美国-2.27MB/s(Youtube:不良林), server: 212.81.47.12, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-508.5KB/s(Youtube:不良林), server: 169.197.142.39, port: 8881, type: ss, cipher: aes-256-gcm, password: kDWvXYZoTBcGkC4}
+  - {name: 🇦🇺 澳大利亚-1.11MB/s(Youtube:不良林), server: 185.167.117.171, port: 9020, type: ss, cipher: aes-256-cfb, password: BNmAXXxAHYpTRdzu}
+  - {name: 🇺🇸 美国-637.2KB/s(Youtube:不良林), server: 169.197.142.39, port: 9102, type: ss, cipher: aes-256-gcm, password: e4FCWrgpkji3QY}
+  - {name: 🇮🇳 印度-1.80MB/s(Youtube:不良林), server: jgwhdlb2.gaox.ml, port: 443, type: trojan, password: 54080134-2cba-4535-8599-95650bd9aa54, sni: jgwhdlb2.gaox.ml, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-440.7KB/s(Youtube:不良林), server: 169.197.142.39, port: 6679, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
+  - {name: 🇺🇸 美国-348.0KB/s(Youtube:不良林), server: 169.197.142.39, port: 5004, type: ss, cipher: aes-256-gcm, password: g5MeD6Ft3CWlJId}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇦🇺 澳大利亚-1.29MB/s(Youtube:不良林)
-      - 波兰-785.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-209.4KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.25MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.31MB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.06MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.52MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.81MB/s(Youtube:不良林)
-      - 波兰-626.0KB/s(Youtube:不良林)
-      - 波兰-656.6KB/s(Youtube:不良林)
+      - 波兰-177.0KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.14MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.06MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.27MB/s(Youtube:不良林)
+      - 🇺🇸 美国-508.5KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.11MB/s(Youtube:不良林)
+      - 🇺🇸 美国-637.2KB/s(Youtube:不良林)
+      - 🇮🇳 印度-1.80MB/s(Youtube:不良林)
+      - 🇺🇸 美国-440.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-348.0KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇦🇺 澳大利亚-1.29MB/s(Youtube:不良林)
-      - 波兰-785.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-209.4KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.25MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.31MB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.06MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.52MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.81MB/s(Youtube:不良林)
-      - 波兰-626.0KB/s(Youtube:不良林)
-      - 波兰-656.6KB/s(Youtube:不良林)
+      - 波兰-177.0KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.14MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.06MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.27MB/s(Youtube:不良林)
+      - 🇺🇸 美国-508.5KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.11MB/s(Youtube:不良林)
+      - 🇺🇸 美国-637.2KB/s(Youtube:不良林)
+      - 🇮🇳 印度-1.80MB/s(Youtube:不良林)
+      - 🇺🇸 美国-440.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-348.0KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇦🇺 澳大利亚-1.29MB/s(Youtube:不良林)
-      - 波兰-785.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-209.4KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.25MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.31MB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.06MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.52MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.81MB/s(Youtube:不良林)
-      - 波兰-626.0KB/s(Youtube:不良林)
-      - 波兰-656.6KB/s(Youtube:不良林)
+      - 波兰-177.0KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.14MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.06MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.27MB/s(Youtube:不良林)
+      - 🇺🇸 美国-508.5KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.11MB/s(Youtube:不良林)
+      - 🇺🇸 美国-637.2KB/s(Youtube:不良林)
+      - 🇮🇳 印度-1.80MB/s(Youtube:不良林)
+      - 🇺🇸 美国-440.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-348.0KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇦🇺 澳大利亚-1.29MB/s(Youtube:不良林)
-      - 波兰-785.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-209.4KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.25MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.31MB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.06MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.52MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.81MB/s(Youtube:不良林)
-      - 波兰-626.0KB/s(Youtube:不良林)
-      - 波兰-656.6KB/s(Youtube:不良林)
+      - 波兰-177.0KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.14MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.06MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.27MB/s(Youtube:不良林)
+      - 🇺🇸 美国-508.5KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.11MB/s(Youtube:不良林)
+      - 🇺🇸 美国-637.2KB/s(Youtube:不良林)
+      - 🇮🇳 印度-1.80MB/s(Youtube:不良林)
+      - 🇺🇸 美国-440.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-348.0KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇦🇺 澳大利亚-1.29MB/s(Youtube:不良林)
-      - 波兰-785.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-209.4KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.25MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.31MB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.06MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.52MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.81MB/s(Youtube:不良林)
-      - 波兰-626.0KB/s(Youtube:不良林)
-      - 波兰-656.6KB/s(Youtube:不良林)
+      - 波兰-177.0KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.14MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.06MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.27MB/s(Youtube:不良林)
+      - 🇺🇸 美国-508.5KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.11MB/s(Youtube:不良林)
+      - 🇺🇸 美国-637.2KB/s(Youtube:不良林)
+      - 🇮🇳 印度-1.80MB/s(Youtube:不良林)
+      - 🇺🇸 美国-440.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-348.0KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇦🇺 澳大利亚-1.29MB/s(Youtube:不良林)
-      - 波兰-785.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-209.4KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.25MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.31MB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.06MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.52MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.81MB/s(Youtube:不良林)
-      - 波兰-626.0KB/s(Youtube:不良林)
-      - 波兰-656.6KB/s(Youtube:不良林)
+      - 波兰-177.0KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.14MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.06MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.27MB/s(Youtube:不良林)
+      - 🇺🇸 美国-508.5KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.11MB/s(Youtube:不良林)
+      - 🇺🇸 美国-637.2KB/s(Youtube:不良林)
+      - 🇮🇳 印度-1.80MB/s(Youtube:不良林)
+      - 🇺🇸 美国-440.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-348.0KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇦🇺 澳大利亚-1.29MB/s(Youtube:不良林)
-      - 波兰-785.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-209.4KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.25MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.31MB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.06MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.52MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.81MB/s(Youtube:不良林)
-      - 波兰-626.0KB/s(Youtube:不良林)
-      - 波兰-656.6KB/s(Youtube:不良林)
+      - 波兰-177.0KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.14MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.06MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.27MB/s(Youtube:不良林)
+      - 🇺🇸 美国-508.5KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.11MB/s(Youtube:不良林)
+      - 🇺🇸 美国-637.2KB/s(Youtube:不良林)
+      - 🇮🇳 印度-1.80MB/s(Youtube:不良林)
+      - 🇺🇸 美国-440.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-348.0KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
